2006-11-03 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	Recognise the Menu key.  Don't actually do anything, but...
	Hook up the input context when loading

	* src/MMapArea.py:
	Only "own" unending links when it's different thoughts
	Change cursor to "grabbing hand" when moving throughts around

	Plus:
	* src/ImageThought.py:
	* src/DrawingThought.py:
	* src/BaseThought.py:
	* src/TextThought.py:
	Remove *Old classes.  Strip whitespace from line ends

	* src/MMapArea.py:
	Don't delete from a live list (Bad!)
	Makes deletion of > 1 thought work properly

	* src/DrawingThought.py:
	When in draw mode and inside the drawing area,
	set the cursor to be a pencil
	Fix to allow unending links to eminate in
	Edit mode.

	* src/MMapArea.py:
	When loading in non-edit mode, set the old_mode
	to be editing mode

	* src/TextThought.py:
	Copy primary selection when necessary.  Paste
	primary selection on middle-button press

	* src/TextThought.py:
	Make cut / copy / paste work again

2006-11-02 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Everything thing seems to be working okay now
	 *fingers crossed* - Loads all my test maps at least)
	* src/DrawingThought.py:
	Convert Drawing to new framework

	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	Fix various problems that have appeared:
	Loading maps with > 1 thought selected sucks (fixed)
	When loading textthoughts, only show the selection text if
	we're currently editing
	Convolve the lovely nice logic we had some more in MMapArea :(

	(Lots of updates.  Looks like Images work now as well)
	* src/ImageThought.py:
	Convert fully over to new framework
	Images may occasionally jump around, for an unknown
	reason at the moment.

	* src/MMapArea.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Links.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	Lots of misc. changes.  Made MMapArea logic almost
	as convolved as before.  But it should really be easier
	now.